tests/negative/typecheck/type_eq_false.orng
// type_eq_false.orng:6:11: error: unexpected type
//     if Int == Bool {
//          ^
// 
fn main() -> Int {
    if Int == Bool {
        unreachable
    } else {
        252
    }
}